--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Happy Girlfriend Day! 🤗</h1>
+      <h1>Amaro bhala paao ni🤗</h1>
       <p>Do you love me?</p>
 
       <div class="btn">
