--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Amaro bhala paao ni🤗</h1>
-      <p>Do you love me?</p>
+      <h1>Amar maoww🤗</h1>
+      <p>Amare bhala paw ni ?</p>
 
       <div class="btn">
-        <a href="yes.html">Yes</a>
-        <a href="no1.html">No</a>
+        <a href="yes.html">ayyyyyee</a>
+        <a href="no1.html">naaaaa</a>
       </div>
     </div>
   </body>
