--- a/no1.html
+++ b/no1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Happy Girlfriend Day!</title>
+    <title>Amar miewwww</title>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -25,12 +25,12 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Soch le ache se! 🙄</h1>
-      <p>Do you love me?</p>
+      <h1>Sure tohhhhhh🙄</h1>
+      <p>ko bhala pas niii?</p>
 
       <div class="btn">
-        <a href="yes.html">Yes</a>
-        <a href="no2.html">No</a>
+        <a href="yes.html">Ayyyy</a>
+        <a href="no2.html">Naaaa</a>
       </div>
     </div>
   </body>
