--- a/no2.html
+++ b/no2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Happy Girlfriend Day!</title>
+    <title>Amar miewwww</title>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -28,12 +28,12 @@
         src="https://tenor.com/embed.js"
       ></script>
 
-      <h1>Ek aur baar Soch le! 😣</h1>
-      <p>Do you love me? Yes bol!</p>
+      <h1>Block marmu kintuuu😣</h1>
+      <p>KO bhala pas ? oyy ko</p>
 
       <div class="btn">
-        <a href="yes.html">Yes</a>
-        <a href="no3.html">No</a>
+        <a href="yes.html">Oy</a>
+        <a href="no3.html">Na</a>
      
       </div>
     </div>
