--- a/no3.html
+++ b/no3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Happy Girlfriend Day!</title>
+    <title>Amar miewwww</title>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -30,12 +30,12 @@
         src="https://tenor.com/embed.js"
       ></script>
 
-      <h1>Maan ja na! Kitna bhav khaegi 😭</h1>
-      <p>Yes bol, fir date pe le jaunga tujhe.</p>
+      <h1>ko an I love youuu😭</h1>
+      <p>oy ko te ador dimuu</p>
 
       <div class="btn">
-        <a href="yes.html">Yes</a>
-        <a href="#" id="move-random">No</a>
+        <a href="yes.html">ayyyye</a>
+        <a href="#" id="move-random">naaaa</a>
       </div>
     </div>
 
