--- a/yes.html
+++ b/yes.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Happy Girlfriend Day!</title>
+    <title>Amar miewwww</title>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -26,7 +26,7 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Hehehehe, I knew it! Love u baby 😘</h1>
+      <h1>ami jantam tui amare bhala pas ! Love u baby 😘</h1>
     </div>
   </body>
 </html>
