--- a/no3.html
+++ b/no3.html
@@ -30,7 +30,7 @@
         src="https://tenor.com/embed.js"
       ></script>
 
-      <h1>ko an I love youuu😭</h1>
+      <h1>ko na I love youuu😭</h1>
       <p>oy ko te ador dimuu</p>
 
       <div class="btn">
